topic模块界面渲染

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -5,7 +5,7 @@ p {margin: 0;}
 html, body{
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 100%;
-    background:#fff; 
+  background:#eee; 
 }
 body a{
 	transition:0.5s all;
