--- a/frontend/web/css/main.less
+++ b/frontend/web/css/main.less
@@ -1,18 +1,18 @@
 body {
     margin: 0;
-    font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    line-height: 22px;
-    color: #6f7579;
-    background-color: white;
+    font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Noto Sans CJK SC,WenQuanYi Micro Hei,Arial,sans-serif;
+    font-size: 15px;
+    color: #262626;
+    background: #f7f8fa;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 a {
-    color: #f0b70c;
+    color:#337ab7;
 }
 
 p {
-    margin-bottom: 22px
+    marin-bottom: 22px
 }
 
 .mains {
@@ -528,3 +528,17 @@ ul.articles li.article-entry:last-child {
     background-color: #ddd;
     text-align: center;
 }
+#logout button{
+  border: 0;
+  background-color: #0767c8;
+  color: #fff;
+}
+
+#logout-li a:hover button{
+    background-color: #0e7bef;
+}
+ .commnet-simple{
+    padding-bottom: 5px;
+    border-bottom: 1px solid #eee;
+ }
+ 
