--- a/frontend/web/css/topic.css
+++ b/frontend/web/css/topic.css
@@ -21,6 +21,13 @@
     background-color: #2d84cc;
     color: #fff;
 }
+.goodCount .active{
+    background-color: #2d84cc;
+    color: #fff;
+}
+.goodCount .active .up{
+    border-bottom: 10px solid #fff;
+}
 .goodCount p .up{
     display: inline-block;
     width: 0;
@@ -42,6 +49,25 @@
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     border-top: 10px solid #2d84cc;
+}
+
+.borders span {
+    display: inline-block;
+    padding-left: 22px;
+    margin-right: 15px;
+    line-height: 22px;
+}
+.like-count{
+    float: left;
+    background: url(../images/like.png) no-repeat 4px 6px;
+}
+.like-count:hover {
+    background: url("../images/like.png") no-repeat 4px -24px;
+    color: #395996;
+}
+.like-active{
+    background: url("../images/like.png") no-repeat 4px -24px;
+    color: #395996;
 }
 .CommentItem {
     position: relative;
@@ -511,10 +537,12 @@ line-height: 24px;
 background: #f7f8fa;
 }
 .Editable{
+margin: 2px;
 width: 100%;
-padding: 10px;
+padding: 8px;
 background: #fff;
 border: 1px solid #e7eaf1;
+box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
 border-radius: 3px;
 box-sizing: border-box;
 }
@@ -538,4 +566,13 @@ padding-top: 6px;
  }
 .CommentItem-editor #input-footer{
     float: left;width: 90%;
+ }
+.topic-time{
+    display: inline-block;
+    float: right;
+ }
+ .topic-huifu{
+    padding-left: 5px;
+    padding-right: 5px;
+    color: #8590a6;
  }
