--- a/frontend/web/css/topic.css
+++ b/frontend/web/css/topic.css
@@ -4,7 +4,15 @@
 .topic-top a{
   float: right;
 }
+.answer{
+    display: inline-block;
+    float: right;
+}
+.attention{
+     display: inline-block;
+}
 .goodCount{
+    display: inline-block;
     width: 80px;
     padding: 2px 3px ;
     text-align: center;
@@ -144,7 +152,8 @@
 }
 
 .CommentItem-editor {
-    margin-bottom: 8px
+    margin-bottom: 8px;
+    overflow: hidden;
 }
 
 .CommentItem-footer {
@@ -562,10 +571,14 @@ border:0;
 padding-top: 6px;
 }
 .CommentItem-editor #comment-footer{
-    float: left; width: 10%; margin-top: 5px;
+    float: left; 
+    width: 10%; 
+    margin-top: 5px;
  }
 .CommentItem-editor #input-footer{
-    float: left;width: 90%;
+    float: left;
+    width: 85%;
+    margin-right: 2%;
  }
 .topic-time{
     display: inline-block;
